# State-Real-Estate-Watchdog

./: .gitignore  pyproject.toml
src/: main.py
src/dashboard/: app.py
src/extract/: base.py  lesy_cr.py  nabidka_majetku.py  portal_drazeb.py
src/models/: estate.py
src/schemas/: estate.py
src/transform/: processor.py
